# anishelf-cli

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: README.md  anishelf-domain-reference.md  cloudkit-app-auth-distribution.md  cloudkit-auth-and-execution.md  implementation-state.md  library-command-ergonomics-notes.md  north-star.md
docs/reference/: anishelf-domain.md  cloudkit-app-auth.md  cloudkit-auth.md
openspec/changes/cloudkit-private-db-agent-cli/: design.md  proposal.md  tasks.md
openspec/changes/public-cloudkit-token-distribution/: design.md  proposal.md  tasks.md
src/anishelf_cli/: __init__.py  __main__.py  app.py  config.py  library.py  models.py  profiles.py  secrets.py
src/anishelf_cli/anishelf/: __init__.py  schema.py
src/anishelf_cli/cache/: __init__.py  metadata.py  records.py  schema.py  scope.py  store.py  sync.py
src/anishelf_cli/cli/: __init__.py  common.py  config_commands.py  groups.py  library_commands.py  library_service.py  options.py  presentation.py  root.py  tmdb_commands.py
src/anishelf_cli/cloudkit/: __init__.py  api_token.py  app_auth_transform.py  auth.py  executor.py  tokens.py
src/anishelf_cli/core/: __init__.py  coercion.py  output.py  redaction.py
src/anishelf_cli/models/: __init__.py  common.py  domain.py  (+3 more)
tests/: support.py  test_cli.py  test_cloudkit_auth.py  test_coercion.py  test_library_cache.py  test_library_entries.py  test_library_get.py  test_library_identity.py  test_library_queries.py  test_output.py  test_output_models.py  test_redaction.py  test_tmdb_client.py  test_tokens.py
(+7 files in other folders)
